--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/mode rn-normalize.min.css"
+      href="https://cdnjs.com/libraries/modern-normalize"
     />
     <title>Our Portfolio</title>
   </head>
@@ -68,7 +68,7 @@
         <ul>
           <li>
             <img
-              src="./images/Product Designer.jpg"
+              src="./images/ProductDesigner.jpg"
               alt="ProductDesigner"
               width="264"
               height="260"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="./images/Frontend Developer.jpg"
+              src="./images/FrontendDeveloper.jpg"
               alt="FrontendDeveloper"
               width="264"
               height="260"
@@ -113,7 +113,7 @@
         <ul>
           <li>
             <img
-              src="./images/Banking App.jpg"
+              src="./images/BankingApp.jpg"
               alt="BankingApp"
               width="360"
               height="300"
@@ -123,7 +123,7 @@
           </li>
           <li>
             <img
-              src="./images/Cashless Payment.jpg"
+              src="./images/CashlessPayment.jpg"
               alt="CashlessPayment"
               width="360"
               height="300"
@@ -133,7 +133,7 @@
           </li>
           <li>
             <img
-              src="./images/Meditation App.jpg"
+              src="./images/MeditationApp.jpg"
               alt="MeditationApp"
               width="360"
               height="300"
@@ -143,7 +143,7 @@
           </li>
           <li>
             <img
-              src="./images/Taxi Service.jpg"
+              src="./images/TaxiService.jpg"
               alt="TaxiService"
               width="360"
               height="300"
@@ -153,7 +153,7 @@
           </li>
           <li>
             <img
-              src="./images/Screen Illustrations.jpg"
+              src="./images/ScreenIllustrations.jpg"
               alt="ScreenIllustrations"
               width="360"
               height="300"
@@ -163,7 +163,7 @@
           </li>
           <li>
             <img
-              src="./images/Online Courses.jpg"
+              src="./images/OnlineCourses.jpg"
               alt="OnlineCourses"
               width="360"
               height="300"
