--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
       rel="stylesheet"
       href="https://cdnjs.com/libraries/modern-normalize"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anta&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anta&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Our Portfolio</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html" target="_blank"><span>Web</span>Studio</a>
+    <header class="header">
+      <a class="logo" href="./index.html" target="_blank"
+        ><span class="piece-logo">Web</span>Studio</a
+      >
       <nav>
         <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./index.html">Portfolio</a></li>
-          <li><a href="./index.html">Contacts</a></li>
+          <li><a class="menu-nav" href="./index.html">Studio</a></li>
+          <li><a class="menu-nav" href="./index.html">Portfolio</a></li>
+          <li><a class="menu-nav" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
     <main>
