--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Anta&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anta&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <title>Our Portfolio</title>
@@ -25,115 +19,144 @@
   <body>
     <header class="header">
       <a class="logo" href="./index.html" target="_blank"
-        ><span class="piece-logo">Web</span>Studio</a
+        >Web<span class="header-piece-logo">Studio</span></a
       >
-      <nav>
-        <ul>
-          <li><a class="menu-nav" href="./index.html">Studio</a></li>
-          <li><a class="menu-nav" href="./index.html">Portfolio</a></li>
-          <li><a class="menu-nav" href="./index.html">Contacts</a></li>
+      <nav class="header-navigation">
+        <ul class="header-menu-list">
+          <li class="header-menu-item">
+            <a class="header-menu-nav" href="./index.html">Studio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-nav" href="./index.html">Portfolio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-nav" href="./index.html">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address class="header-adress">
+        <ul class="header-contact-list">
+          <li class="header-contact-item">
+            <a
+              class="header-contact-link"
+              href="mailto:info@devstudio.com"
+              target="_blank"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contact-item">
+            <a
+              class="header-contact-link"
+              href="tel:+110001111111"
+              target="_blank"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-section-one">
+        <h1 class="main-general-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button class="button" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="main-section-two">
+        <h2 class="main-second-title">Advantages</h2>
+        <ul class="main-advantages-list">
+          <li class="main-advantages-item">
+            <h3 class="main-title-advantages">Strategy</h3>
+            <p class="main-advantages-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="main-advantages-item">
+            <h3 class="main-title-advantages">Punctuality</h3>
+            <p class="main-advantages-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="main-advantages-item">
+            <h3 class="main-title-advantages">Diligence</h3>
+            <p class="main-advantages-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="main-title-advantages">Technologies</h3>
+            <p class="main-advantages-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="main-section-three">
+        <h2 class="main-third-title">Our Team</h2>
+        <ul class="main-team-list">
+          <li class="main-team-item">
             <img
+              class="main-team-img"
               src="./images/ProductDesigner.jpg"
               alt="ProductDesigner"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="main-team-user">Mark Guerrero</h3>
+            <p class="main-team-profession">Product Designer</p>
           </li>
-          <li>
+          <li class="main-team-item">
             <img
+              class="main-team-img"
               src="./images/FrontendDeveloper.jpg"
               alt="FrontendDeveloper"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="main-team-user">Tom Ford</h3>
+            <p class="main-team-profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="main-team-item">
             <img
+              class="main-team-img"
               src="./images/Marketing.jpg"
               alt="Marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="main-team-user">Camila Garcia</h3>
+            <p class="main-team-profession">Marketing</p>
           </li>
-          <li>
+          <li class="main-team-item">
             <img
+              class="main-team-img"
               src="./images/UIDesigner.jpg"
               alt="UIDesigner"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UIDesigner</p>
+            <h3 class="main-team-user">Daniel Wilson</h3>
+            <p class="main-team-profession">UIDesigner</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+      <section class="main-section-fourth">
+        <h2 class="main-third-fourth">Our Portfolio</h2>
+        <ul class="main-portfolio-list">
+          <li class="main-portfolio-item">
             <img
+              class="main-portfolio-img"
               src="./images/BankingApp.jpg"
               alt="BankingApp"
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="main-portfolio-app">Banking App</h3>
+            <p class="main-portfolio-direction">App</p>
           </li>
           <li>
             <img
@@ -142,8 +165,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="main-portfolio-app">Cashless Payment</h3>
+            <p class="main-portfolio-direction">Marketing</p>
           </li>
           <li>
             <img
@@ -152,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="main-portfolio-app">Meditation App</h3>
+            <p class="main-portfolio-direction">App</p>
           </li>
           <li>
             <img
@@ -162,8 +185,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="main-portfolio-app">Taxi Service</h3>
+            <p class="main-portfolio-direction">Marketing</p>
           </li>
           <li>
             <img
@@ -172,8 +195,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="main-portfolio-app">Screen Illustrations</h3>
+            <p class="main-portfolio-direction">Design</p>
           </li>
           <li>
             <img
@@ -182,15 +205,17 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="main-portfolio-app">Online Courses</h3>
+            <p class="main-portfolio-direction">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" target="_blank"><span>Web</span>Studio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html" target="_blank"
+        >Web<span class="footer-piece-logo">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
