Change HTML and CSS

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <a class="header-menu-nav" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-nav" href="./index.html">Portfolio</a>
+            <a class="header-menu-nav" href="">Portfolio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-nav" href="./index.html">Contacts</a>
+            <a class="header-menu-nav" href="">Contacts</a>
           </li>
         </ul>
       </nav>
